--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,29 +1,19 @@
-name: Build Surfpool
-
+name: build-surfpool
 on:
   workflow_dispatch:
   push:
-    branches:
-      - main
-
+    branches: [ "main" ]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - name: Build (release)
+        run: cargo build --release --locked
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
         with:
-          toolchain: stable
-          override: true
-
-      - name: Build release binary
-        run: cargo build --release
-
-      - name: Upload binary artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: surfpool
+          name: surfpool-linux-amd64
           path: target/release/surfpool
+
